ch08/8-3_path-ingree.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: path-ingress
spec:
  rules:
  - host: bandicoot.example.com
    http:
      paths:
        - path: "/"
          backend:
            serviceName: bandicoot-prod
            servicePort: 8080
        - path: "/a/"
          backend:
            serviceName: alpaca-prod
            servicePort: 8080
